# jain-digitizer

./: .cursorrules  .envrc  .gitignore  CHANGELOG.md  GEMINI.md  README.md  Taskfile.yml  environment.yml  jain-digitizer-darwin-arm64.spec  jain-digitizer.spec  pyproject.toml
.github/workflows/: release.yaml
conda/: meta.yaml
docs/: DEVELOPMENT.md
docs/guide/: README.md
src/: main.py  prompt.md  prompt.txt  rich_editor.py
src/jain_digitizer/: __init__.py  app_window.py  constants.py  file_drop_zone.py  main.py  prompt-html.md  rich_editor.py  settings_dialog.py  translator.py  version.py
src/jain_digitizer/common/: constants.py  logger_setup.py  prompt-md.md  translator.py
src/jain_digitizer/desktop/: app_window.py  camera_dialog.py  main.py  overlay.py  rich_editor.py  settings_dialog.py
src/jain_digitizer/web/: app.py
test/: test_gui.py  test_translator.py
utils/: check_camera.py  trigger_camera.swift
