[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jain-digitizer"
version = "0.22"
description = "High-fidelity OCR and translation tool for Jain and Hindi literature using Gemini 2.0"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jain Digitizer Contributors"},
]
dependencies = [
    "PySide6",
    "rich",
    "google-genai",
    "streamlit",
    "streamlit-quill",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-qt",
]
dev = [
    "pyinstaller>=6.0.0",
    "pyinstaller-hooks-contrib",
    "build",
    "twine",
    "pytest",
    "pytest-qt",
]

[project.scripts]
jain-digitizer = "jain_digitizer.desktop.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jain_digitizer/desktop"]
rewrite-path = "src/"
